# backups_ilya

./: .gitignore  CMakeLists.txt
labs_src/: CMakeLists.txt
labs_src/lab3/: BackupJob.cpp  BackupJob.h  JobObject.cpp  JobObject.h  Repository.cpp  Repository.h  RestorePoint.cpp  RestorePoint.h  Storage.h  lab3_functions.h
labs_src/libzippp-master/: CMakeLists.txt  compile.bat
labs_src/libzippp-master/libzip-1.8.0/: CMakeLists.txt
labs_src/libzippp-master/libzip-1.8.0/cmake-compat/: FindBZip2.cmake  FindGnuTLS.cmake  FindLibLZMA.cmake  FindPackageHandleStandardArgs.cmake
labs_src/libzippp-master/libzip-1.8.0/lib/: CMakeLists.txt
labs_src/libzippp-master/libzip-1.8.0/man/: CMakeLists.txt
labs_tests/: lab3_tests.cpp
